# OpenGL-workshop

./: .clang-tidy  CMakeLists.txt  README.md
src/: CMakeLists.txt  application.cpp  application.hpp  main.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp
